--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="./main.css">
 </head>
+
 <body>
-    <div class="wraper">
+    <div class="wrapper">
         <div class="nose"></div>
         <div class="eye left"></div>
         <div class="eye right"></div>
         <div class="face left"></div>
         <div class="face right"></div>
+        <div class="upper_lip left"></div>
+        <div class="upper_lip right"></div>
+        <div class="lower_lip_wrapper">
+            <div class="lower_lip"></div>
+        </div>
     </div>
 </body>
+
 </html>
