--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hans">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pikachu</title>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <style id="styleTag"></style>
+    <script src="./js/main.js"></script>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="nose"></div>
-        <div class="eye left"></div>
-        <div class="eye right"></div>
-        <div class="face left"></div>
-        <div class="face right"></div>
-        <div class="upper_lip left"></div>
-        <div class="upper_lip right"></div>
-        <div class="lower_lip_wrapper">
-            <div class="lower_lip"></div>
+    <div class="code_wrapper">
+        <pre id="code"></pre>
+    </div>
+    <div class="preview_wrapper">
+        <div class="preview">
+            <div class="wrapper">
+                <div class="lower_lip_wrapper">
+                    <div class="lower_lip"></div>
+                </div>
+                <div class="nose"></div>
+                <div class="eye left"></div>
+                <div class="eye right"></div>
+                <div class="face left"></div>
+                <div class="face right"></div>
+                <div class="upper_lip left"></div>
+                <div class="upper_lip right"></div>
+            </div>
         </div>
     </div>
 </body>
