--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pikachu</title>
     <link rel="stylesheet" href="./css/main.css">
-    <style id="styleTag"></style>
-    <script src="./js/main.js"></script>
+    <style id="styleTag"></style>     
 </head>
 
 <body>
@@ -31,6 +30,14 @@
             </div>
         </div>
     </div>
+    <div class="actions">
+        <button data-speed="slow">慢</button>
+        <button data-speed="normal" class="active">中</button>
+        <button data-speed="fast">快</button>
+        <button data-speed="stop">停</button>
+    </div>
+    <script src="./js/jquery-3.2.1.min.js"></script>
+    <script src="./js/main.js"></script>   
 </body>
 
 </html>
